--- a/scss-css/blocks/main.css
+++ b/scss-css/blocks/main.css
@@ -1,6 +1,9 @@
 /* mixin */
 /* mixin */
 .main-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column-reverse;
   background-color: #fff6ef;
   outline: 1px solid green;
 }
@@ -23,11 +26,12 @@
   width: 280px;
   -o-object-fit: cover;
      object-fit: cover;
+  align-self: center;
 }
 
 @media (min-width: 620px) {
   .main-container {
-    display: flex;
+    flex-direction: inherit;
   }
   .main-info {
     padding: 20px;
