--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -15,6 +15,9 @@
 /* section reviews */
 @import "blocks/reviews.scss";
 
+/* section gallery */
+@import "blocks/gallery.scss";
+
 /* footer */
 @import "blocks/footer.scss";
 
