--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -186,21 +186,6 @@
   font-weight: 600;
 }
 
-/* section gallery */
-.gallery-container {
-  padding: 50px 20px;
-}
-
-.gallery-title {
-  padding-bottom: 20px;
-  font-family: "Gabriela", serif;
-  font-size: 18px;
-  font-weight: 400;
-  font-style: normal;
-  color: #03a9f4;
-  text-align: center;
-}
-
 @media (min-width: 420px) {
   .basic-info-list,
   .basic-info-list-link {
@@ -220,8 +205,7 @@
   .item-desc-list-title {
     font-size: 16px;
   }
-  .item-title,
-  .gallery-title {
+  .item-title {
     font-size: 20px;
   }
   .item-list[open] > summary::after {
@@ -248,8 +232,7 @@
   .item-cart-desc {
     font-size: 20px;
   }
-  .item-title,
-  .gallery-title {
+  .item-title {
     font-size: 25px;
   }
   .item-list[open] > summary::after {
