--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -1,8 +1,15 @@
 /*mixin */
 /* mixin */
 /* section reviews */
+.reviews {
+  display: flex;
+  justify-content: center;
+}
+
 .reviews-container {
-  padding: 50px 20px;
+  padding: 50px 0px;
+  min-width: 280px;
+  max-width: 450px;
 }
 
 .reviews-title {
