изменила размер картинки главной страницы @media 620px

--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -247,6 +247,9 @@
   .main-info {
     padding: 20px;
   }
+  .main-info-img {
+    width: 350px;
+  }
 }
 /* section category page */
 /* mixin */
