--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -111,53 +111,22 @@
   justify-content: center;
 }
 
-.basic-info-list,
-.basic-info-list-link {
-  margin: 0px 0px 20px 10px;
-  padding: 10px;
-  width: 265px;
-  height: 100px;
-
-  border-radius: 16px;
-
-  align-content: center;
-}
-
 .basic-info-list {
-  outline: 1px solid #03a9f4;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @include basic-border();
 }
 
-.basic-info-list-link {
-  outline: 2px solid #03a9f4;
+.items-link {
+  @include link-border-swadow();
 
-  text-align: center;
+  &:hover .item-link-title {
+    color: #03a9f4;
+  }
+}
+
+.item-link-title {
+  @include font(18px);
 
   transition: 1s;
-
-  &:focus {
-    outline: 2px solid #ffffff;
-    box-shadow: 1px 1px 10px rgba(3, 244, 13, 0.6196078431);
-  }
-
-  &:hover {
-    outline: 2px solid #ffffff;
-    box-shadow: 1px 1px 10px rgba(3, 244, 13, 0.6196078431);
-  }
-}
-
-.order-link {
-  @include font(16px, #03a9f4);
-
-  text-decoration: none;
-  font-weight: 600;
-
-  &:hover {
-    color: 1px 1px 2px rgba(3, 244, 13, 0.6196078431);
-  }
 }
 
 .basic-info-icon {
@@ -200,7 +169,7 @@
 
 @media (min-width: 420px) {
   .basic-info-list,
-  .basic-info-list-link {
+  .items-link {
     width: 280px;
   }
 }
@@ -236,14 +205,14 @@
   }
 
   .basic-info-list,
-  .basic-info-list-link {
+  .items-link {
     margin: 0px 0px 20px 20px;
   }
 }
 
 @media (min-width: 700px) {
   .basic-info-list,
-  .basic-info-list-link {
+  .items-link {
     width: 300px;
   }
 }
