--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -26,6 +26,7 @@
 .review-cart {
   padding: 10px 20px;
   min-width: 240px;
+  height: 400px;
   border: none;
   align-items: center;
 }
@@ -92,7 +93,7 @@
     font-size: 20px;
   }
   .review-cart-text {
-    width: 450px;
+    width: 380px;
     height: 300px;
   }
   .review-author-name,
