--- a/scss-css/blocks/reviews.scss
+++ b/scss-css/blocks/reviews.scss
@@ -30,6 +30,7 @@
   padding: 10px 20px;
 
   min-width: 240px;
+  height: 400px;
 
   border: none;
   align-items: center;
@@ -92,7 +93,7 @@
   }
 
   .review-cart-text {
-    width: 450px;
+    width: 380px;
     height: 300px;
   }
 
