--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -604,6 +604,7 @@
 .review-cart {
   padding: 10px 20px;
   min-width: 240px;
+  height: 400px;
   border: none;
   align-items: center;
 }
@@ -670,7 +671,7 @@
     font-size: 20px;
   }
   .review-cart-text {
-    width: 450px;
+    width: 380px;
     height: 300px;
   }
   .review-author-name,
