--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -103,18 +103,19 @@
 }
 
 .basic-info {
-  padding: 0;
-  list-style-type: none;
+  padding: 10px;
 
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  list-style-type: none;
 }
 
 .basic-info-list {
   @include basic-border();
 
-  margin: 0px 0px 20px 10px;
+  margin-bottom: 20px;
 }
 
 .items-link {
@@ -132,7 +133,7 @@
 }
 
 .basic-info-icon {
-  margin-right: 5px;
+  margin: 20px 0px 0px 5px;
 }
 
 .item-desc-img,
