--- a/scss-css/blocks/main.scss
+++ b/scss-css/blocks/main.scss
@@ -29,7 +29,7 @@
 }
 
 .items-link {
-  @include link-border-swadow();
+  /*@include link-border-swadow(200px, 50px);*/
 
   &:hover .item-link-title {
     color: #03a9f4;
