--- a/scss-css/blocks/header.scss
+++ b/scss-css/blocks/header.scss
@@ -134,26 +134,19 @@
 .link-list::after {
   margin-left: 5px;
 
-  display: inline-block;
-
-  width: 20px;
-  height: 20px;
-
   content: "";
-  background: url("../img/caret.png") no-repeat;
-  padding-right: 0.5em;
-  background-size: 15px;
 
-  transform: rotateZ(90deg);
+  @include arrow();
+
   translate: 0px 4px;
+  display: inline-block;
 }
 
 .list[open] > summary::after {
   content: "";
-  background: url("../img/caret.png") no-repeat;
-  background-size: 15px;
 
-  transform: rotateZ(-90deg);
+  @include arrow(20px, 20px, 15px, -90deg);
+
   translate: 4px 4px;
 }
 
