--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -67,22 +67,17 @@
 
 .item-title::after {
   margin-left: 5px;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
   content: "";
-  background: url(../img/caret.png) no-repeat;
-  padding-right: 0.5em;
-  background-size: 12px;
-  transform: rotateZ(90deg);
+
+  @include arrow(20px, 20px, 12px, 90deg);
+
   translate: 0px 4px;
 }
 
 .item-list[open] > summary::after {
   content: "";
-  background: url(../img/caret.png) no-repeat;
-  background-size: 12px;
-  transform: rotateZ(-90deg);
+  @include arrow(20px, 20px, 12px, -90deg);
+
   translate: 0px -2px;
 }
 
