переименовала img caret.png в arrow.png

--- a/scss-css/blocks/mixin.scss
+++ b/scss-css/blocks/mixin.scss
@@ -60,7 +60,7 @@
   height: $height;
 
   content: "";
-  background: url("../img/caret.png") no-repeat;
+  background: url("../img/arrow.png") no-repeat;
   padding-right: 0.5em;
   background-size: $size;
 
