--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -244,10 +244,23 @@
   text-align: center;
 }
 
-.items-link {
-  /*@include link-border-swadow(200px, 50px);*/
+.link-choose-item {
+  width: 220px;
+  height: 80px;
+  display: block;
+  align-content: center;
+  text-align: center;
+  text-decoration: none;
+  background-color: #ffffff;
+  outline: 2px solid #03a9f4;
+  border-radius: 16px;
+  transition: 1s;
 }
-.items-link:hover .item-link-title {
+.link-choose-item:hover {
+  outline: 2px solid #ffffff;
+  box-shadow: 3px 3px 3px 3px #03a9f4;
+}
+.link-choose-item:hover .item-link-title {
   color: #03a9f4;
 }
 
