добавила  mixin arrow в карточку отзывов

--- a/scss-css/blocks/reviews.scss
+++ b/scss-css/blocks/reviews.scss
@@ -67,17 +67,14 @@
 }
 
 .arrow-left {
-  background: url(../img/caret.png) no-repeat;
-  background-size: 20px;
+  @include arrow(20px, 20px, 20px, 0deg);
   translate: 15px 0px;
 }
 
 .arrow-right {
-  background: url(../img/caret.png) no-repeat;
-  background-size: 20px;
+  @include arrow(20px, 20px, 20px, -180deg);
 
-  transform: rotate(-180deg);
-  translate: -15px -12px;
+  translate: -15px 0px;
 }
 
 @media (min-width: 420px) {
@@ -109,7 +106,7 @@
   }
 
   .arrow-right {
-    translate: -20px -12px;
+    translate: -20px 0px;
   }
   .arrow-left {
     translate: 20px 0px;
