--- a/scss-css/blocks/main.css
+++ b/scss-css/blocks/main.css
@@ -70,6 +70,7 @@
     padding: 20px;
   }
   .main-info-img {
+    padding-top: 20px;
     width: 350px;
   }
 }/*# sourceMappingURL=main.css.map */
