--- a/scss-css/blocks/main.css
+++ b/scss-css/blocks/main.css
@@ -1,6 +1,6 @@
 /* mixin */
 /* mixin */
-.main-info {
+.main-info-header {
   display: flex;
   justify-content: center;
   flex-direction: column-reverse;
@@ -68,7 +68,7 @@
 }
 
 @media (min-width: 620px) {
-  .main-info {
+  .main-info-header {
     flex-direction: inherit;
   }
   .main-info-desc {
