--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -218,7 +218,7 @@
 /* main */
 /* mixin */
 /* mixin */
-.main-info {
+.main-info-header {
   display: flex;
   justify-content: center;
   flex-direction: column-reverse;
@@ -286,7 +286,7 @@
 }
 
 @media (min-width: 620px) {
-  .main-info {
+  .main-info-header {
     flex-direction: inherit;
   }
   .main-info-desc {
@@ -295,6 +295,113 @@
   .main-info-img {
     padding-top: 20px;
     width: 350px;
+  }
+}
+/*section categories */
+/* mixin */
+/* mixin */
+/* section categories */
+.categories {
+  padding: 0px 20px;
+  margin: 0px 10px;
+  display: flex;
+  justify-content: center;
+  border-radius: 16px;
+  background-color: #fff6ef;
+}
+
+.categories-container {
+  min-width: 280px;
+}
+
+.categories-title {
+  padding: 50px 0px;
+  font-family: "Gabriela", serif;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  color: #03a9f4;
+  text-align: center;
+}
+
+.categoties-list {
+  padding: 0px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+
+.category-link {
+  text-decoration: none;
+}
+
+.categoty-line {
+  padding-bottom: 20px;
+}
+
+/* category-cart */
+.category-cart,
+.primary-school-img,
+.school-img,
+.graduation school-img {
+  width: 280px;
+  height: 200px;
+  border-radius: 16px;
+}
+
+.category-cart {
+  padding-top: 10px;
+}
+
+.primary-school-img,
+.school-img,
+.graduation-school-img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.primary-school-img {
+  background: url(../img/main-img.jpg) center no-repeat;
+  background-size: 100%;
+}
+
+.high-school-img {
+  background: url(../img/sobor.jpg) center no-repeat;
+  background-size: 100%;
+}
+
+.graduation-school-img {
+  background: url(../img/main-info-img2.jpg) center no-repeat;
+  background-size: 100%;
+}
+
+.category-title {
+  padding: 10px;
+  width: 50%;
+  font-family: "Gabriela", serif;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  color: #03a9f4;
+  background-color: #ffffff;
+}
+
+@media (min-width: 420px) {
+  .category-cart {
+    width: 350px;
+    height: 200px;
+  }
+}
+@media (min-width: 700px) {
+  .category-cart {
+    width: 315px;
+    height: 200px;
+  }
+  .categoties-list {
+    justify-content: space-between;
   }
 }
 /* section category page */
@@ -332,16 +439,15 @@
 }
 
 .item-cart-desc {
-  padding: 0px 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  padding: 10px 20px;
+  font-weight: 600;
 }
 
-.item-img {
+.item-cart-img {
   width: 100%;
   height: 200px;
+  background: url(../img/item-primary-school-science4.jpeg) center no-repeat;
+  background-size: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center;
