--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -7,6 +7,9 @@
 /* main */
 @import "blocks/main.scss";
 
+/*section categories */
+@import "blocks/categories.scss";
+
 /* section category page */
 @import "blocks/category-page.scss";
 
