--- a/scss-css/blocks/breadcrumbles.css
+++ b/scss-css/blocks/breadcrumbles.css
@@ -44,7 +44,7 @@
   width: 10px;
   height: 10px;
   content: "";
-  background: url("../img/caret.png") no-repeat;
+  background: url("../img/arrow.png") no-repeat;
   padding-right: 0.5em;
   background-size: 10px;
   transform: rotateZ(0deg);
