--- a/scss-css/blocks/categories.css
+++ b/scss-css/blocks/categories.css
@@ -1,4 +1,7 @@
+/* variables */
+/* $main-background-color: #d7dcdf; */
 /* mixin */
+/* variables */
 /* mixin */
 /* section categories */
 .categories {
