--- a/scss-css/blocks/mixin.scss
+++ b/scss-css/blocks/mixin.scss
@@ -1,3 +1,6 @@
+/* variables */
+$primory-color: #03a9f4;
+
 /* mixin */
 @mixin hidden($width: 1px, $height: 1px) {
   position: absolute;
@@ -17,7 +20,17 @@
   color: $color;
 }
 
-@mixin basic-border($width: 265px, $height: 100px) {
+@mixin font-logo($size: 18px, $color: $primory-color) {
+  font-family: "Great Vibes", cursive;
+  font-weight: 600;
+  font-style: normal;
+  font-size: $size;
+  line-height: 0.65;
+
+  color: $color;
+}
+
+@mixin border-blue($width: 265px, $height: 100px) {
   padding: 10px;
 
   width: $width;
@@ -25,7 +38,7 @@
 
   border-radius: 16px;
 
-  outline: 1px solid #03a9f4;
+  outline: 1px solid $primory-color;
 
   display: flex;
   justify-content: space-between;
@@ -33,7 +46,7 @@
   align-content: center;
 }
 
-@mixin link-border-swadow($width: 265px, $height: 100px) {
+@mixin basic-btn($width: 265px, $height: 100px) {
   width: $width;
   height: $height;
 
@@ -44,14 +57,14 @@
   text-decoration: none;
 
   background-color: #ffffff;
-  outline: 2px solid #03a9f4;
+  outline: 2px solid $primory-color;
   border-radius: 16px;
 
   transition: 1s;
 
   &:hover {
     outline: 2px solid #ffffff;
-    box-shadow: 3px 3px 3px 3px #03a9f4;
+    box-shadow: 3px 3px 3px 3px $primory-color;
   }
 }
 
