--- a/scss-css/blocks/footer.scss
+++ b/scss-css/blocks/footer.scss
@@ -1,8 +1,13 @@
+/* variables */
+$primory-color: #03a9f4;
+$main-background-color: #fff6ef;
+/* $main-background-color: #d7dcdf; */
+
 /* mixin */
 @import "mixin.scss";
 
 .footer-container {
-  background-color: #d7dcdf;
+  background-color: $main-background-color;
 }
 
 .info {
