--- a/scss-css/blocks/header.css
+++ b/scss-css/blocks/header.css
@@ -1,4 +1,6 @@
+/* variables */
 /* mixin */
+/* variables */
 /* mixin */
 /* header logo */
 .header {
@@ -26,6 +28,7 @@
   font-style: normal;
   font-size: 18px;
   line-height: 0.65;
+  color: #03a9f4;
   padding-top: 12px;
 }
 
