--- a/scss-css/blocks/main.scss
+++ b/scss-css/blocks/main.scss
@@ -1,3 +1,7 @@
+/* variables */
+$primory-color: #03a9f4;
+$main-background-color: #fff6ef;
+
 /* mixin */
 @import "mixin.scss";
 
@@ -6,7 +10,7 @@
   justify-content: center;
   flex-direction: column-reverse;
 
-  background-color: #fff6ef;
+  background-color: $main-background-color;
 
   outline: 1px solid green;
 }
@@ -33,10 +37,10 @@
 }
 
 .link-choose-item {
-  @include link-border-swadow(220px, 80px);
+  @include basic-btn(220px, 80px);
 
   &:hover .item-link-title {
-    color: #03a9f4;
+    color: $primory-color;
   }
 }
 
