--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -1,7 +1,10 @@
 /* mixin */
+/* variables */
 /* mixin */
 /* header */
+/* variables */
 /* mixin */
+/* variables */
 /* mixin */
 /* header logo */
 .header {
@@ -29,6 +32,7 @@
   font-style: normal;
   font-size: 18px;
   line-height: 0.65;
+  color: #03a9f4;
   padding-top: 12px;
 }
 
@@ -216,7 +220,9 @@
   }
 }
 /* main */
+/* variables */
 /* mixin */
+/* variables */
 /* mixin */
 .main-info-header {
   display: flex;
@@ -298,7 +304,10 @@
   }
 }
 /*section categories */
+/* variables */
+/* $main-background-color: #d7dcdf; */
 /* mixin */
+/* variables */
 /* mixin */
 /* section categories */
 .categories {
@@ -405,7 +414,9 @@
   }
 }
 /* section category page */
+/* variables */
 /* mixin */
+/* variables */
 /* mixin */
 .category-main-container {
   border-top: 1px solid #03a9f4;
@@ -652,6 +663,7 @@
   }
 }
 /* mixin */
+/* variables */
 /* mixin */
 /* breadcrumbles */
 .breadcrumbles {
@@ -706,7 +718,9 @@
 }
 
 /* section reviews */
+/* variables */
 /*mixin */
+/* variables */
 /* mixin */
 /* section reviews */
 .reviews {
@@ -846,7 +860,9 @@
   }
 }
 /* section gallery */
+/* variables */
 /* mixin */
+/* variables */
 /* mixin */
 /* section gallery */
 .gallery {
@@ -881,10 +897,13 @@
   }
 }
 /* footer */
+/* variables */
+/* $main-background-color: #d7dcdf; */
 /* mixin */
+/* variables */
 /* mixin */
 .footer-container {
-  background-color: #d7dcdf;
+  background-color: #fff6ef;
 }
 
 .info {
